# funprojects

./: anish
brisque/: CMakeLists.txt  Makefile  brisque.cpp  brisque.h  brisquequality  computescore.cpp  main-dorian-tiler.cpp  main.cpp  readme.txt  test.cpp  trainModel.cpp
brisque/libsvm-3.18/: svm-predict  svm-scale
raytracer/: README.md  raytracer  raytracer.cpp
